# ARCS

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  attribution.py  config.py  docker-compose.yml  export_router_onnx.py  feedback.py  groq_client.py  judge.py  logger.py  main.py  pipelines.py  progress.py  pyproject.toml  requirements-demo.txt  requirements.txt  router.py  router_test.csv  sandbox.py  spec_generator.py  test_generator.py
ARCS/: .gitignore  requirements.txt  router.py  spec_generator.py  test_router.py  train_router.py
arcs/: __init__.py  config.py  main.py
data/: batch_queries.jsonl  dataset.csv  eval_queries.jsonl
docs/: DEPLOY.md  PRESENTATION.md  RESULTS.md  SCORECARD.md
eval-results/: eval_report.json  misclassified_test.json
logs/: README.md
scripts/: apply_sidecar.py  bootstrap_rq1_corpus.py  compare_experiments.py  eval_judge_modes.py  eval_naive_baseline.py  eval_pipeline.py  eval_repair_ablation.py  eval_router.py  export_eval_failures.py  export_router_onnx.py  extract_queues.py  feedback_stats.py  judge_ab.py  label_router_failures.py  merge_experiments.py  optimize_coding.py  optimize_general.py  optimize_judge.py  optimize_legal.py  optimize_medical.py  optimize_spec.py  push_demo_image.sh  repair.py  reproduce.sh  retrain_router.py  rq1_prepare_datasets.py  rq1_run.py  run_batch.py  run_coding_repair.sh  run_demo.py  smoke_e2e.py  smoke_router.py  snapshot_baseline.py  snapshot_post_fix.py  validate_eval_queries.py
specialist/: __init__.py  coding.py  general.py  legal.py  medical.py
(+86 files in other folders)
