[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs"
version = "0.1.0"
description = "Adaptive Routing & Correction System"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["arcs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
